[tool.poetry]
name = "api-test"
version = "0.1.0"
description = ""
authors = ["John Scarrott <johnps@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
